@@ -39,7 +39,7 @@ $fields = array(
 	'variables' =>		array(T_ZBX_STR, O_OPT, null,	null,				'isset({save})'),
 	'timeout' =>		array(T_ZBX_INT, O_OPT, null,	BETWEEN(0,65535),	'isset({save})', _('Timeout')),
 	'required' =>		array(T_ZBX_STR, O_OPT, null,	null,				'isset({save})'),
-	'status_codes' =>	array(T_ZBX_INT_RANGE, O_OPT, 	null, null,			'isset({save})'),
+	'status_codes' =>	array(T_ZBX_STR, O_OPT, null,	null,				'isset({save})'),
 	'templated' =>		array(T_ZBX_STR, O_OPT, null, 	null, null),
 	'old_name'=>		array(T_ZBX_STR, O_OPT, null, 	null, null),
 	'steps_names'=>		array(T_ZBX_STR, O_OPT, null, 	null, null),
